# univapp

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  services.py
tests/: test_booking.py
