[project]
name = "universal-appointment-queue"
version = "0.1.0"
description = "Universal Appointment + Queue System MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic>=2.8.2",
  "python-dateutil>=2.9.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
